[package]
name = "dxlib_sample_0001"
version = "0.4.1" # change with html_root_url in main.rs
edition = "2021"
authors = ["nomissbowling <nomissbowling@yahoo.co.jp>"]

description = "sample dxlib dll for Rust"
keywords = ["dxlib", "directx", "3d", "opengl"]
categories = ["development-tools", "graphics", "rendering", "rendering::graphics-api"]
license = "MIT"

documentation = "https://docs.rs/crate/dxlib_sample_0001"
homepage = "https://crates.io/crates/dxlib_sample_0001"
repository = "https://github.com/nomissbowling/dxlib_sample_0001"

readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dxlib = { version = "0.4.1" }
#dxlib = { path = "c:/prj/dxlib" }

Fullerene = { version = "0.1.5" } # "0.1.5"
#Fullerene = { path = "c:/prj/fullerene" }

num = { version = "0.4" } # "0.4.1"
